--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0;  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
-#map_canvas { height: 100%; width:100%; }
+.angular-leaflet-map {
+	height: 100%; width:100%;
+}
 .outbound { background-color: #7094FF; }
 .inbound { background-color: #FF6262; }
 .down {
@@ -180,6 +182,14 @@ body { height: 100%; margin: 0; padding: 0;  font: 14px "Lucida Grande", Helveti
 	min-width: 250px;
 	margin: 0;
 	padding: 0;
+}
+
+.leaflet-marker-icon
+{
+  -webkit-transition: all 7s ease-in-out;
+  -moz-transition: all 7s ease-in-out;
+  -o-transition: all 7s ease-in-out;
+  transition: all 7s ease-in-out;
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 	/*
